--- a/src/app/navigation/persistent-notifications-quick/persistent-notifications-quick.component.scss
+++ b/src/app/navigation/persistent-notifications-quick/persistent-notifications-quick.component.scss
@@ -1,26 +1,32 @@
 .persistent-notification {
   display: flex;
   align-items: center;
-  font-family: Roboto, sans-serif;
-  border-top: 1px solid rgba(0,0,0,0.08);
+  padding: 14px 24px;
   background: #F7EBCF;
+  font-family: Roboto, sans-serif;
 
   strong {
     margin-right: 5px;
-
+    margin-left: 10px;
   }
+
   div {
+    padding: 5px;
     font-size: 16px;
-    padding: 10px 25px;
+  }
+
+  img {
+    width: 30px;
+    height: 30px;
   }
 
   md-icon {
-    margin-right: 25px;
+    margin-right: 8px;
     margin-left: auto;
-    font-size: 16px;
-    height: 16px;
-    width: 16px;
-    color: rgba(0,0,0,0.5);
+    height: 18px;
+    width: 18px;
+    font-size: 18px;
+    color: rgba(0,0,0,0.4);
     cursor: pointer;
   }
 }
