--- a/src/app/navigation/persistent-notifications-quick/persistent-notifications-quick.component.scss
+++ b/src/app/navigation/persistent-notifications-quick/persistent-notifications-quick.component.scss
@@ -29,4 +29,10 @@
     color: rgba(0,0,0,0.4);
     cursor: pointer;
   }
+
+  &__action {
+    margin-left: 10px;
+    color: #5B9BE1;
+    cursor: pointer;
+  }
 }
