Move 'invite user' logic from profile to account view, refactor profile accounts list

--- a/src/app/pages/accounts-page/account-view/account-add-new/account-add-new.component.html
+++ b/src/app/pages/accounts-page/account-view/account-add-new/account-add-new.component.html
@@ -1,7 +1,7 @@
 <div class="entity-view__card">
   <div class="entity-view__card__header">
     <div class="entity-view__card__header__title">Account Details</div>
-    <ng-container *ngIf="mode === modes.View">
+    <ng-container *ngIf="mode === modes.View && editEnabled">
       <md-icon [md-menu-trigger-for]="editOptions">more_vert</md-icon>
       <md-menu #editOptions="mdMenu" x-position="before">
         <button md-menu-item (click)="changeMode.emit(modes.Update)"> Edit Account Details </button>
