--- a/src/app/pages/accounts-page/account-view/account-view.component.html
+++ b/src/app/pages/accounts-page/account-view/account-view.component.html
@@ -26,6 +26,7 @@
       <account-add-new
         [entity]="entity"
         [mode]="viewMode ? modes.View : modes.Update"
+        [editEnabled]="isOwnerOrAdministrator() || authService.isActiveAclMasterAccount()"
         (changeMode)="setMode($event)"
         (cancel)="cancelUpdate()"
         (save)="saveOrUpdate($event)"
@@ -39,8 +40,12 @@
         [textOptions]="text"
         [associateDataMapper]="aclMapper"
         [customAssociation]="true"
-        [editEnabled]="true"
+        [associationEnabled]="authService.isActiveAclMasterAccount()"
+        [editEnabled]="isOwnerOrAdministrator() || authService.isActiveAclMasterAccount()"
+        [dissociationEnabled]="isOwnerOrAdministrator() || authService.isActiveAclMasterAccount()"
         [ignoreDisassociate]="isOwner"
+        [customTopMenuOptions]="(isOwnerOrAdministrator() || authService.isActiveAclMasterAccount()) ? ['Invite User'] : []"
+        (customTopMenuOptionSelected)="inviteUser()"
         (view)="navigateToUser($event)"
         (associate)="showAddAclModal()"
         (disassociate)="removeAcl($event)"
