--- a/src/app/pages/components/table-memory/table-memory.component.html
+++ b/src/app/pages/components/table-memory/table-memory.component.html
@@ -5,10 +5,11 @@
       <input md-input placeholder="Filter" [(ngModel)]="filterString" type="text">
     </md-input-container>
 
-    <ng-container *ngIf="associationEnabled && hasWritePermission">
+    <ng-container *ngIf="(associationEnabled || customTopMenuOptions.length > 0) && hasWritePermission">
       <md-icon class="entity-view__table-component__header__action" [class.alone]="!filterEnabled" [md-menu-trigger-for]="optionsMenu">more_vert</md-icon>
       <md-menu #optionsMenu="mdMenu" x-position="before">
-        <button md-menu-item (click)="showAssociateDialog()">{{textOptions.associateOptionText || 'Associate ' + title}}</button>
+        <button *ngIf="associationEnabled" md-menu-item (click)="showAssociateDialog()">{{textOptions.associateOptionText || 'Associate ' + title}}</button>
+        <button *ngFor="let customOption of customTopMenuOptions" md-menu-item (click)="customTopMenuOptionSelected.emit(customOption)">{{customOption}}</button>
       </md-menu>
     </ng-container>
   </div>
