Remove delete user/account option for non master account

--- a/src/app/pages/accounts-page/account-index/accounts.component.html
+++ b/src/app/pages/accounts-page/account-index/accounts.component.html
@@ -18,6 +18,7 @@
 
         [service]="service"
         [customOptionText]="actAsOptionText"
+        [showDelete]="authService.isActiveAclMasterAccount()"
         (viewClicked)="viewEntity($event.id)"
         (copyClicked)="copyEntity($event.id)"
         (exportClicked)="exportEntity($event.id)"
