User must accept new terms and conditions before continue

--- a/src/app/navigation/layouts/default/default.layout.component.html
+++ b/src/app/navigation/layouts/default/default.layout.component.html
@@ -30,3 +30,7 @@
   <registration-form></registration-form>
 </div>
 
+<div *ngIf="(authService.sixUserActivated$ | async) && (tacService.termsAndConditionsOutdated$ | async)" class="registration-form__container">
+  <terms-and-conditions></terms-and-conditions>
+</div>
+
