Modify terms-and-conditions flow

--- a/src/app/authentication/terms-and-conditions/terms-and-conditions.component.html
+++ b/src/app/authentication/terms-and-conditions/terms-and-conditions.component.html
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="registration-form__form registration-form__form--tac">
-      {{termsAndConditionsText}}
+      {{termsAndConditions.content}}
     </div>
     <div class="registration-form__button" (click)="acceptTermsAndConditions()">Agree</div>
 
