Fix queries for terms and conditions

--- a/src/app/authentication/terms-and-conditions/terms-and-conditions.component.html
+++ b/src/app/authentication/terms-and-conditions/terms-and-conditions.component.html
@@ -10,7 +10,8 @@
       </div>
     </div>
     <div class="registration-form__form registration-form__form--tac">
-      {{termsAndConditions.content}}
+      <div>{{termsAndConditions.title}}</div>
+      <div>{{termsAndConditions.body}}</div>
     </div>
     <div class="registration-form__button" (click)="acceptTermsAndConditions()">Agree</div>
 
