Show inviter, account name and role name on accept invite screen

--- a/src/app/authentication/invite-accept/invite-accept.component.html
+++ b/src/app/authentication/invite-accept/invite-accept.component.html
@@ -18,9 +18,10 @@
     <ng-container *ngIf="welcomeScreen">
       <div style="margin: auto" class="title">
         You were invited to SIX CRM by <br>
-        [user placeholder] <br>
-        of company <br>
-        [company placeholder]
+        {{invitor}} <br><br>
+        to be {{role}} <br>
+        for {{account}} <br>
+
       </div>
       <div style="margin-top: auto" class="subtitle">
         Press "Accept" below to continue
