--- a/src/app/error-page/error-page.component.scss
+++ b/src/app/error-page/error-page.component.scss
@@ -4,6 +4,7 @@
     position: relative;
     width: 100%;
     height: calc(100vh - 72px);
+    font-family: Roboto, sans-serif;
   }
 
   position: absolute;
