--- a/src/app/authentication/terms-and-conditions/terms-and-conditions.component.html
+++ b/src/app/authentication/terms-and-conditions/terms-and-conditions.component.html
@@ -10,10 +10,10 @@
 
       <div class="registration-form__title">
         <div class="registration-form__title__main">
-          Terms and conditions have been updated!
+          Terms and Conditions have been updated!
         </div>
         <div class="registration-form__title__text registration-form__title__text--tac">
-          To continue using SIX you must accept new terms and conditions
+          To continue using SIX you must accept new Terms and Conditions
         </div>
       </div>
       <div class="registration-form__form registration-form__form--tac">
