Fix accept invite e2e test

--- a/src/app/authentication/invite-accept/invite-accept.component.html
+++ b/src/app/authentication/invite-accept/invite-accept.component.html
@@ -12,7 +12,7 @@
       </div>
 
       <div class="registration-form__button registration-form__button--no-margin accept-invite__button" (click)="goToLogin()">Log In</div>
-      <div class="registration-form__button--cancel" (click)="complete()">Cancel</div>
+      <div class="registration-form__button--cancel" (click)="complete()">Log out</div>
     </ng-container>
 
     <ng-container *ngIf="welcomeScreen">
