Fix advanced filter on state machine

--- a/src/app/pages/state-machine-page/state-machine-dashboard/state-machine-dashboard.component.html
+++ b/src/app/pages/state-machine-page/state-machine-dashboard/state-machine-dashboard.component.html
@@ -1,17 +1,16 @@
-<div class="filter-container">
-
-  <advanced-filter
-    [date]="date"
-    [filterTerms]="filterTerms"
-    [refreshText]="'Refresh State Machine'"
-    [shareUrl]="''">
-  </advanced-filter>
-
-</div>
-
 <div class="schema-status-container">
   <state-machine-schema [items]="items" (itemSelected)="select($event)"></state-machine-schema>
   <state-machine-status [items]="items"></state-machine-status>
+</div>
+
+<div class="filter-container">
+  <advanced-filter
+    [date]="date"
+    [onlyDates]="true"
+    [refreshText]="'Refresh State Machine'"
+    [shareUrl]="''"
+    (dateChanged)="changeDate($event)">
+  </advanced-filter>
 </div>
 
 <state-machine-details *ngIf="selectedItem" [item]="selectedItem"></state-machine-details>
