--- a/src/app/pages/state-machine-page/state-machine-dashboard/state-machine-status/state-machine-status-item/state-machine-status-item.component.html
+++ b/src/app/pages/state-machine-page/state-machine-dashboard/state-machine-status/state-machine-status-item/state-machine-status-item.component.html
@@ -8,7 +8,7 @@
 
   <div class="status-item__additional">
     <div class="status-item__additional__box">
-      <div class="status-item__additional__title">Avg Time in Queue</div>
+      <div class="status-item__additional__title">Avg. Time in Queue</div>
       <div class="arrow-container">
         <div class="status-item__additional__value">{{item.avgTimeInSeconds | formatDuration}}</div>
         <div class="arrow"
