--- a/src/assets/scss/_advanced-filter.scss
+++ b/src/assets/scss/_advanced-filter.scss
@@ -23,6 +23,11 @@ $color-orange: #F16C00;
       margin: 10px 20px 10px 0;
     }
 
+    &--only {
+      margin-left: auto;
+      margin-right: 25px;
+    }
+
     &__quick {
       margin-left: 5px;
 
